--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "singleQuote": true,
+  "arrowParens": "always",
   "plugins": [
     "./extras/prettier-imports"
-  ]
+  ],
+  "printWidth": 120,
+  "singleQuote": true
 }
