Extended for use as executable script and updated packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lenne.tech/typescript-starter",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Start for a new typescript project",
   "keywords": [
     "lenne.Tech",
@@ -29,27 +29,28 @@
     "postinstall": "path-exists ./dist/bin/welcome.bin.js && node ./dist/bin/welcome.bin.js $INIT_CWD || true",
     "prepack": "npm run build",
     "preversion": "npm run lint",
+    "start": "ts-node src/index.ts",
     "test": "jest",
     "watch": "jest --watch"
   },
   "dependencies": {},
   "devDependencies": {
-    "@lenne.tech/npm-package-helper": "0.0.9",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.3",
-    "@typescript-eslint/eslint-plugin": "2.0.0",
-    "@typescript-eslint/parser": "2.0.0",
-    "eslint": "6.3.0",
-    "eslint-config-prettier": "6.1.0",
-    "husky": "3.0.4",
+    "@lenne.tech/npm-package-helper": "0.0.10",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.8",
+    "@typescript-eslint/eslint-plugin": "2.7.0",
+    "@typescript-eslint/parser": "2.7.0",
+    "eslint": "6.6.0",
+    "eslint-config-prettier": "6.5.0",
+    "husky": "3.0.9",
     "jest": "24.9.0",
     "path-exists-cli": "1.0.0",
-    "prettier": "1.18.2",
-    "pretty-quick": "1.11.1",
+    "prettier": "1.19.1",
+    "pretty-quick": "2.0.1",
     "rimraf": "3.0.0",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.3.0",
-    "typescript": "3.6.2"
+    "ts-jest": "24.1.0",
+    "ts-node": "8.5.2",
+    "typescript": "3.7.2"
   },
   "peerDependencies": {},
   "jest": {
